Added navigation menu to app component template

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<h1>{{title}}</h1>
+<mat-toolbar>
+  <span>{{title}}</span>
+  <button routerLink="/home" routerLinkActive="active">home</button>
+  <button routerLink="/login" routerLinkActive="active">login</button>
+</mat-toolbar>
 <router-outlet></router-outlet>
