--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 <mat-toolbar>
-  <span>{{title}}</span>
-  <button routerLink="/home" routerLinkActive="active">home</button>
-  <button routerLink="/login" routerLinkActive="active">login</button>
+  <div class="toolbar-wrapper">
+    <span>{{title}}</span>
+    <div class="right">
+      <button mat-button routerLink="/home" routerLinkActive="active">home</button>
+      <button mat-button routerLink="/login" routerLinkActive="active">login</button>
+    </div>
+  </div>
 </mat-toolbar>
 <router-outlet></router-outlet>
