--- a/src/app/initial-form/initial-form.component.html
+++ b/src/app/initial-form/initial-form.component.html
@@ -1,1 +1,61 @@
-<p>initial-form works!</p>
+<!-- Initial Form -->
+<form [formGroup]="intialForm">
+    <mat-form-field>
+        <mat-label>Trip type</mat-label>
+        <mat-select formControlName="tripTypeControl">
+            @for (tripOption of tripOptions; track tripOption.value) {
+            <mat-option [value]="tripOption.value">{{tripOption.description}}</mat-option>
+            } @empty {
+            <span>no trip options available...</span>
+            }
+        </mat-select>
+    </mat-form-field>
+
+    <!-- Flight Location(s) -->
+    <mat-form-field>
+        <mat-label>Select a departure city</mat-label>
+        <input #input type="text" placeholder="Pick one" matInput formControlName="departureLocation"
+            [matAutocomplete]="auto" (input)="filter()" (focus)="filter()">
+        <mat-autocomplete requireSelection #auto="matAutocomplete">
+            @for (option of filteredCityOptions; track option) {
+            <mat-option [value]="option">{{option}}</mat-option>
+            }
+        </mat-autocomplete>
+    </mat-form-field>
+
+    <!-- Flight Date(s) -->
+    <!-- KM TODO: Implment conditional logic to switch between date picker and date range depending on the value of tripTypeControl -->
+    <!-- ONE WAY -->
+    <mat-form-field>
+        <mat-label>Choose a date</mat-label>
+        <input matInput [matDatepicker]="singlePicker" formControlName="departureDate">
+        <mat-hint>MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle matIconSuffix [for]="singlePicker"></mat-datepicker-toggle>
+        <mat-datepicker #singlePicker></mat-datepicker>
+    </mat-form-field>
+    <!-- ROUND TRIP -->
+    <mat-form-field>
+        <mat-label>Enter a date range</mat-label>
+        <mat-date-range-input formGroupName="dateRange" [rangePicker]="rangePicker">
+            <input matStartDate formControlName="start" placeholder="Start date">
+            <input matEndDate formControlName="end" placeholder="End date">
+        </mat-date-range-input>
+        <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle matIconSuffix [for]="rangePicker"></mat-datepicker-toggle>
+        <mat-date-range-picker #rangePicker></mat-date-range-picker>
+
+        <!-- KM TODO: Implement validation messages -->
+        <!-- @if (initialForm.dateRange.controls.start.hasError('matStartDateInvalid')) {
+        <mat-error>Invalid start date</mat-error>
+        }
+        @if (dateRange.controls.end.hasError('matEndDateInvalid')) {
+        <mat-error>Invalid end date</mat-error>
+        } -->
+    </mat-form-field>
+
+    <!-- Number of Passengers -->
+    <mat-form-field>
+        <mat-label>Number of passengers</mat-label>
+        <input matInput type="number" formControlName="passengerControl">
+    </mat-form-field>
+</form>
