--- a/src/app/initial-form/initial-form.component.html
+++ b/src/app/initial-form/initial-form.component.html
@@ -42,7 +42,7 @@
         @if (initialForm.get('tripTypeControl')?.value === 'one-way') {
         <mat-form-field>
             <mat-label>Choose a date</mat-label>
-            <input matInput [matDatepicker]="singlePicker" formControlName="departureDate">
+            <input matInput [matDatepicker]="singlePicker" formControlName="departureDate" [min]="minDate">
             <mat-hint>MM/DD/YYYY</mat-hint>
             <mat-datepicker-toggle matIconSuffix [for]="singlePicker"></mat-datepicker-toggle>
             <mat-datepicker #singlePicker></mat-datepicker>
@@ -54,8 +54,8 @@
         <mat-form-field>
             <mat-label>Enter a date range</mat-label>
             <mat-date-range-input formGroupName="dateRange" [rangePicker]="rangePicker">
-                <input matStartDate formControlName="start" placeholder="Start date">
-                <input matEndDate formControlName="end" placeholder="End date">
+                <input matStartDate formControlName="start" placeholder="Start date" [min]="minDate">
+                <input matEndDate formControlName="end" placeholder="End date" [min]="minDate">
             </mat-date-range-input>
             <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
             <mat-datepicker-toggle matIconSuffix [for]="rangePicker"></mat-datepicker-toggle>
@@ -74,17 +74,21 @@
         <!-- Number of Passengers -->
         <mat-form-field>
             <mat-label>Number of passengers</mat-label>
-            <input matInput type="number" formControlName="passengerControl">
+            <input matInput type="number" formControlName="passengerControl" min="0" max="9">
         </mat-form-field>
 
+        @if (initialForm.get('passengerControl')?.valid === true && initialForm.get('passengerControl')?.value) {
         <mat-form-field>
             <mat-label>Select class</mat-label>
-            <mat-select>
+            <mat-select formControlName="flightClass">
                 @for (option of flightClassOptions; track option) {
-                <mat-option [value]="option.value">{{option.description}}</mat-option>
+                <mat-option [value]="option.value" [class.preferred]="option.preferred">
+                    {{option.description}}
+                </mat-option>
                 }
             </mat-select>
         </mat-form-field>
+        }
 
         <button mat-raised-button color="primary" [disabled]="!initialForm.valid">Find flights</button>
     </form>
