--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar>
   <div class="toolbar-wrapper">
+    <img src="../assets/images/dal-logo.png" id="dal-logo" alt="dal-logo">
     <span>{{title}}</span>
     <div class="right">
       <button mat-button routerLink="/home" routerLinkActive="active">home</button>
@@ -7,4 +8,6 @@
     </div>
   </div>
 </mat-toolbar>
-<router-outlet></router-outlet>
+<div class="content-container">
+  <router-outlet></router-outlet>
+</div>
