--- a/src/app/initial-form/initial-form.component.scss
+++ b/src/app/initial-form/initial-form.component.scss
@@ -2,8 +2,11 @@
   display: flex;
   flex-flow: column;
   margin: 2em auto;
-  max-width: 500px;
+  width: 500px;
+  min-width: 280px;
   padding: 1em;
+  background-color: white;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
   .form-row {
     display: flex;
