--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -37,3 +37,9 @@ mat-toolbar {
   margin-right: 1em;
   border-radius: 4px;
 }
+
+@media only screen and (max-width: 500px) {
+  .toolbar-wrapper {
+    margin: 0;
+  }
+}
